--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
             </div>
             <div class="form-group">
               <label class="form-label">Komentarz</label>
-              <textarea id="comment" name="comment" rows="6" maxlength="200" placeholder="Wrpowadź tekst" class="form-textarea"></textarea>
+              <textarea id="comment" name="comment" rows="6" maxlength="200" placeholder="Wprowadź tekst" class="form-textarea"></textarea>
             </div>
             <div class="form-group">
               <label for="accept" tabindex="0" class="form-label-submit">
